--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 
 <h1>This is a Heading on my website</h1>
 <p>This is a paragraph.</p>
-<p>This is a paragraph.</p>
+<p>This is a second paragraph.</p>
 
 </body>
 </html>
